--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -76,6 +76,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   max-width: 215px;
+  gap: 8px;
   div p {
     overflow-wrap: break-word;
   }
@@ -153,7 +154,7 @@ ul {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
   li {
     & {
@@ -177,9 +178,13 @@ ul {
   border: 1px solid black;
 }
 .eldiv {
-  height: 38%;
+  // min-height: 38%;
   width: 100%;
   color: var(--black-white);
+  border-top: 3px solid var(--black-white);
+  border-bottom: transparent !important;
+  border-left: transparent !important;
+  border-right: transparent !important;
   @media (max-width: 300px) {
     height: 50%;
   }
@@ -194,15 +199,12 @@ ul {
 }
 .divImg {
   min-width: 260px;
+  min-height: 223px;
   height: 62%;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 101%;
-  border-bottom: 3px solid var(--black-white);
-  border-top: transparent !important;
-  border-left: transparent !important;
-  border-right: transparent !important;
   img {
     max-width: calc((262.2px / 100) * 80);
     color: var(--black-white);
@@ -245,6 +247,8 @@ option {
 }
 button {
   text-transform: uppercase;
+  border: none;
+  outline: none;
 }
 input,
 button {
@@ -258,7 +262,7 @@ form[data-form2] {
   @media (max-width: 255px) {
     justify-content: center;
   }
-  label{
+  label {
     svg {
       width: 34px;
       height: 34px;
@@ -272,7 +276,6 @@ form[data-form2] {
       -o-border-radius: 15px 0 0 15px;
       border-right: 1px solid #aaa;
     }
-
   }
   input {
     border-left: 1px solid #aaa;
@@ -297,7 +300,7 @@ p {
   background-color: var(--input);
   margin: 10px;
   min-height: 360px;
-  height: 360px;
+  // height: 360px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -360,6 +363,7 @@ select[data-select-weaknesses] {
   gap: 10px;
 }
 .up-div {
+  color: var(--black-white);
   position: fixed;
   right: 10px;
   top: 92%;
@@ -367,19 +371,43 @@ select[data-select-weaknesses] {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background-color: #0d6efd;
+  background-color: var(--bs-primary);
+
+  &:hover {
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+    a {
+      svg {
+        color: var(--white);
+      }
+    }
+  }
+  &:focus {
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+    box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+    a {
+      svg {
+        color: var(--white);
+      }
+    }
+  }
   a {
     text-decoration: none;
     border-radius: 50%;
     svg {
-      transform: scale(0.5);
       color: var(--black-white);
+      transform: scale(0.5);
     }
   }
-  @media (max-width:500px) {
+  @media (max-width: 500px) {
     right: 0;
   }
-}.dark-div {
+}
+.dark-div {
+  transition: .3s linear;
   position: fixed;
   display: flex;
   right: 10px;
@@ -388,37 +416,88 @@ select[data-select-weaknesses] {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background-color: #0d6efd;
+  background-color: var(--bs-primary);
   color: var(--black-white);
   align-items: center;
   justify-content: center;
   font-size: 15px;
-  @media (max-width:500px) {
+  &:hover {
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+  }
+  &:focus {
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+    box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  }
+  @media (max-width: 500px) {
     right: 0;
   }
 }
 
-li[data-not-found]{
-  list-style:none;
+li[data-not-found] {
+  list-style: none;
   font-weight: 900;
   font-size: 30px;
   text-align: center;
-  color:var(--black-white);
+  color: var(--black-white);
 }
 
-.dark-theme{
-  ::placeholder{
+.dark-theme {
+  ::placeholder {
     color: var(--input-color);
-}
-}
-
-.search-div{
-  color:var(--black-white)
+  }
 }
 
-.divRight{
-  svg{
+.search-div {
+  color: var(--black-white);
+}
+
+.divRight {
+  svg {
     transform: scale(1.5);
   }
   color: var(--black-white);
+}
+
+.btn-danger {
+  padding: 5px;
+  background-color: var(--bs-danger);
+}
+
+.btn-danger:hover {
+  color: #fff;
+  background-color: var(--bs-danger-hover);
+}
+.light-div {
+  transition: .3s linear;
+  position: fixed;
+  display: flex;
+  right: -100%;
+  top: 84%;
+  z-index: 10;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: var(--bs-primary);
+  color: var(--black-white);
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  &:hover {
+    color: #000;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+  }
+  &:focus {
+    color: #000;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+    box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  }
+  @media (max-width: 500px) {
+    right: 0;
+  }
 }
