--- a/css/my.css
+++ b/css/my.css
@@ -9,17 +9,19 @@
   --white-black: #fff;
   --black-white: #000;
   --gray-white: #aaa;
+  --bs-danger-hover: #bb2d3b;
 }
 
 .dark-theme {
-    --bg-my: #343a40;
-    --bg-dark: #343a40;
-    --input-color: #fff;
-    --white-black: #000;
-    --input: rgba(255, 255, 255, 0.3);
-    --black-white: #fff;
-    --gray-white: #fff;
-
+  --bg-my: #343a40;
+  --bg-dark: #343a40;
+  --input-color: #fff;
+  --white-black: #000;
+  --input: rgba(255, 255, 255, 0.3);
+  --black-white: #fff;
+  --gray-white: #fff;
+  --bs-danger-hover: #202123;
+  --bs-danger: #343a40;
 }
 
 /* .dark-theme{
