--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -415,7 +415,6 @@ li[data-not-found] {
   transition: 0.5s linear;
   position: fixed;
   display: flex;
-  right: 0px;
   top: 10%;
   z-index: 10;
   width: 48px;
@@ -441,7 +440,6 @@ li[data-not-found] {
   transition: 0.5s linear;
   position: fixed;
   display: flex;
-  right: -100%;
   top: 10%;
   z-index: 10;
   width: 48px;
@@ -481,4 +479,10 @@ form[data-form]{
   @media (max-width:500px) {
     display: none;
   }
+}
+.right-nol{
+  right: 0;
+}
+.right-yuz{
+  right: -100%;
 }
