--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -143,7 +143,8 @@ input {
   outline: none;
   text-transform: capitalize;
 }
-.btn-danger {
+.btn-danger,
+[data-delete-all] {
   padding: 5px;
   border: none;
   outline: none;
@@ -360,21 +361,25 @@ li[data-not-found] {
   color: var(--black-white);
 }
 
-.btn-danger {
+.btn-danger,
+[data-delete-all] {
   transition: 0.5s ease;
   padding: 5px;
   background-color: var(--bs-danger);
 }
 
-.btn-danger:hover {
+.btn-danger:hover,
+[data-delete-all]:hover {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
-.btn-danger:active {
+.btn-danger:active,
+[data-delete-all]:active {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
-.btn-danger:focus {
+.btn-danger:focus,
+[data-delete-all]:focus {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
