--- a/css/main.css
+++ b/css/main.css
@@ -89,16 +89,8 @@ body {
   gap: 30px;
 }
 
-.divRight {
-  width: 10%;
-  height: 100%;
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
-}
-
 .divLeft {
-  width: 90%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -177,11 +169,10 @@ input {
 }
 
 .btn-danger,
-[data-delete-all] {
+.btn-success {
   padding: 5px;
   border: none;
   outline: none;
-  margin: 10px;
   border-radius: 13px;
 }
 
@@ -215,11 +206,6 @@ ul {
   border-bottom: transparent !important;
   border-left: transparent !important;
   border-right: transparent !important;
-}
-@media (max-width: 300px) {
-  .eldiv {
-    height: 50%;
-  }
 }
 
 .heart {
@@ -417,34 +403,44 @@ li[data-not-found] {
   color: var(--black-white);
 }
 
-.divRight {
-  color: var(--black-white);
-}
-.divRight svg {
-  transform: scale(1.5);
+.btn-success {
+  transition: 0.5s ease;
+  padding: 5px;
+  background-color: var(--bs-success);
 }
 
-.btn-danger,
-[data-delete-all] {
+.btn-danger {
   transition: 0.5s ease;
   padding: 5px;
   background-color: var(--bs-danger);
 }
 
-.btn-danger:hover,
-[data-delete-all]:hover {
+.btn-success:hover {
+  color: #fff;
+  background-color: var(--bs-success-hover);
+}
+
+.btn-danger:hover {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
 
-.btn-danger:active,
-[data-delete-all]:active {
+.btn-success:active {
+  color: #fff;
+  background-color: var(--bs-success-hover);
+}
+
+.btn-danger:active {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
 
-.btn-danger:focus,
-[data-delete-all]:focus {
+.btn-success:focus {
+  color: #fff;
+  background-color: var(--bs-success-hover);
+}
+
+.btn-danger:focus {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
@@ -455,28 +451,26 @@ li[data-not-found] {
   color: var(--black-white) !important;
   position: fixed;
   right: 0px;
-  top: 92%;
+  bottom: 10%;
   z-index: 10;
   width: 48px;
   height: 48px;
   border-radius: 50%;
   background-color: var(--white-black) !important;
+  text-decoration: none;
+  border-radius: 50%;
 }
-.up-div a svg {
+.up-div svg {
   color: var(--black-white) !important;
 }
 .up-div:hover {
   background-color: var(--black-white) !important;
 }
-.up-div:hover a,
-.up-div:hover a svg {
+.up-div:hover,
+.up-div:hover svg {
   color: var(--white-black) !important;
 }
-.up-div a {
-  text-decoration: none;
-  border-radius: 50%;
-}
-.up-div a svg {
+.up-div svg {
   transform: scale(0.5);
 }
 
@@ -533,27 +527,8 @@ svg {
   cursor: pointer;
 }
 
-div[data-add] {
-  display: none;
-}
-@media (max-width: 500px) {
-  div[data-add] {
-    display: flex;
-    padding: 5px 12px;
-    border-radius: 50%;
-    background-color: var(--bg-select);
-    color: var(--black-white);
-    border: solid var(--gray-white);
-  }
-}
-
 form[data-form] {
   display: flex;
-}
-@media (max-width: 500px) {
-  form[data-form] {
-    display: none;
-  }
 }
 
 .right-nol {
@@ -562,4 +537,8 @@ form[data-form] {
 
 .right-yuz {
   right: -100%;
+}
+
+.delete-btn-remove .btn-danger {
+  display: none;
 }/*# sourceMappingURL=main.css.map */
