--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -67,15 +67,8 @@ body {
   justify-content: center;
   gap: 30px;
 }
-.divRight {
-  width: 10%;
-  height: 100%;
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
-}
 .divLeft {
-  width: 90%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -144,11 +137,10 @@ input {
   text-transform: capitalize;
 }
 .btn-danger,
-[data-delete-all] {
+.btn-success {
   padding: 5px;
   border: none;
   outline: none;
-  margin: 10px;
   border-radius: 13px;
 }
 ul {
@@ -181,9 +173,6 @@ ul {
   border-bottom: transparent !important;
   border-left: transparent !important;
   border-right: transparent !important;
-  @media (max-width: 300px) {
-    height: 50%;
-  }
 }
 .heart {
   transform: scale(0.45);
@@ -354,32 +343,37 @@ li[data-not-found] {
   color: var(--black-white);
 }
 
-.divRight {
-  svg {
-    transform: scale(1.5);
-  }
-  color: var(--black-white);
+.btn-success {
+  transition: 0.5s ease;
+  padding: 5px;
+  background-color: var(--bs-success);
 }
-
-.btn-danger,
-[data-delete-all] {
+.btn-danger {
   transition: 0.5s ease;
   padding: 5px;
   background-color: var(--bs-danger);
 }
-
-.btn-danger:hover,
-[data-delete-all]:hover {
+.btn-success:hover {
+  color: #fff;
+  background-color: var(--bs-success-hover);
+}
+.btn-danger:hover {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
-.btn-danger:active,
-[data-delete-all]:active {
+.btn-success:active {
+  color: #fff;
+  background-color: var(--bs-success-hover);
+}
+.btn-danger:active {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
-.btn-danger:focus,
-[data-delete-all]:focus {
+.btn-success:focus {
+  color: #fff;
+  background-color: var(--bs-success-hover);
+}
+.btn-danger:focus {
   color: #fff;
   background-color: var(--bs-danger-hover);
 }
@@ -389,29 +383,27 @@ li[data-not-found] {
   color: var(--black-white) !important;
   position: fixed;
   right: 0px;
-  top: 92%;
+  bottom: 10%;
   z-index: 10;
   width: 48px;
   height: 48px;
   border-radius: 50%;
   background-color: var(--white-black) !important;
-  a svg {
+  svg {
     color: var(--black-white) !important;
   }
 
   &:hover {
     background-color: var(--black-white) !important;
-    a,
-    a svg {
+    &,
+    svg {
       color: var(--white-black) !important;
     }
   }
-  a {
-    text-decoration: none;
-    border-radius: 50%;
-    svg {
-      transform: scale(0.5);
-    }
+  text-decoration: none;
+  border-radius: 50%;
+  svg {
+    transform: scale(0.5);
   }
 }
 .light-div {
@@ -461,33 +453,20 @@ li[data-not-found] {
   }
 }
 img,
-svg{
+svg {
   cursor: pointer;
 }
-
-
-
-div[data-add]{
-  display: none;
-  @media (max-width:500px) {
-    display: flex;
-    padding: 5px 12px;
-    border-radius: 50%;
-    background-color: var(--bg-select);
-    color: var(--black-white);
-    border: solid var(--gray-white);
-  }
-}
-
-form[data-form]{
+form[data-form] {
   display: flex;
-  @media (max-width:500px) {
-    display: none;
-  }
 }
-.right-nol{
+.right-nol {
   right: 0;
 }
-.right-yuz{
+.right-yuz {
   right: -100%;
+}
+.delete-btn-remove{
+  .btn-danger{
+    display: none;
+  }
 }
