--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -5,6 +5,38 @@
   font-family: "Roboto", sans-serif;
   word-wrap: break-word;
 }
+
+:root {
+  --bg-my: #ffd845;
+  --bg-dark: #343a40;
+  --bg-select: rgba(255, 255, 255, 0.3);
+  --dark: #000;
+  --input-color: rgba(255, 255, 255, 0.3);
+  --white: #fff;
+  --input: #fff;
+  --white-black: #fff;
+  --black-white: #000;
+  --gray-white: #aaa;
+  --bs-danger-hover: #bb2d3b;
+  --bs-success: #198754;
+  --bs-success-hover: var(--bs-success);
+}
+
+.dark-theme {
+  --bg-my: #343a40;
+  --bg-dark: #343a40;
+  --input-color: #fff;
+  --white-black: #000;
+  --input: rgba(255, 255, 255, 0.3);
+  --black-white: #fff;
+  --gray-white: #fff;
+  --bs-danger-hover: #202123;
+  --bs-success: #555658;
+  --bs-success-hover: #201123;
+  --bs-danger: #555658;
+  --bs-primary: #555658;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -102,7 +134,7 @@ h1 {
   }
 }
 .d-n {
-  display: none;
+  display: none !important;
 }
 .parent {
   display: flex;
@@ -465,8 +497,47 @@ form[data-form] {
 .right-yuz {
   right: -100%;
 }
-.delete-btn-remove{
-  .btn-danger{
+.delete-btn-remove {
+  .btn-danger {
     display: none;
+  }
+}
+.modal {
+  align-items: center;
+  justify-content: center;
+  inset: 0;
+  transition: 0.5s linear;
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  .modal-content {
+    background-color: var(--bg-my);
+    max-width: 80%;
+    padding: 0 0 48px 0;
+    @media (max-width: 500px) {
+      max-width: 95%;
+    }
+    .modal-content-close {
+      color: var(--black-white);
+      display: flex;
+      align-items: center;
+      justify-content: start;
+    }
+    .modal-pokemons {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0;
+      padding: 0;
+      justify-content: center;
+      gap: 30px;
+      li {
+        & {
+          @media (max-width: 286px) {
+            max-width: 260px;
+          }
+        }
+      }
+    }
+    button {
+      display: none;
+    }
   }
 }
